[gd_scene load_steps=30 format=2]

[ext_resource path="res://Characters/Gura/UI/full_art.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/victory.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Menus/VictoryScreenSurvival.gd" type="Script" id=3]
[ext_resource path="res://Assets/Fonts/ApeMount-WyPM9.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/UI/cursor.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Menus/ButtonTypeB.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/UI/character_select_tri.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Menus/AltInputs.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Shaders/White.gdshader" type="Shader" id=9]

[sub_resource type="Animation" id=28]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=29]
resource_name = "start_transit_in"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=42]
resource_name = "transit_to_main_menu"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "res://Scenes/Menus/MainMenu.tscn" ],
"method": "change_scene"
} ]
}

[sub_resource type="Animation" id=31]
resource_name = "transit_to_survival"
length = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.15 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "res://Scenes/Menus/SurvivalMenu.tscn" ],
"method": "change_scene"
} ]
}

[sub_resource type="Shader" id=49]
code = "shader_type canvas_item;

uniform vec2 Direction = vec2(1.0, 0.0);
uniform float Speed = 0.08;

void fragment()
{
	COLOR = texture(TEXTURE, UV + (Direction * TIME * Speed));
}"

[sub_resource type="ShaderMaterial" id=50]
shader = SubResource( 49 )
shader_param/Direction = Vector2( 1, 1.7 )
shader_param/Speed = 0.5

[sub_resource type="Animation" id=51]
resource_name = "default"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.458824, 0.458824, 0.458824, 1 ), Color( 0.87451, 0.87451, 0.87451, 1 ), Color( 0.458824, 0.458824, 0.458824, 1 ) ]
}

[sub_resource type="Animation" id=52]
resource_name = "rainbow"
length = 1.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1.5, 0.7, 0.7, 1 ), Color( 1.5, 1.5, 0.7, 1 ), Color( 0.7, 1.5, 0.7, 1 ), Color( 0.7, 1.5, 1.5, 1 ), Color( 0.7, 0.7, 1.5, 1 ), Color( 1.5, 0.7, 1.5, 1 ), Color( 1.5, 0.7, 0.7, 1 ) ]
}

[sub_resource type="ShaderMaterial" id=48]
shader = ExtResource( 9 )
shader_param/whitening = 0.0

[sub_resource type="DynamicFont" id=34]
size = 180
outline_size = 15
outline_color = Color( 0.121569, 0.121569, 0.121569, 1 )
use_filter = true
extra_spacing_top = 7
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=47]

[sub_resource type="Theme" id=27]
default_font = SubResource( 34 )
Button/colors/font_color = Color( 0.588235, 0.588235, 0.588235, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.588235, 0.588235, 0.588235, 1 )
Button/colors/font_color_hover = Color( 0.588235, 0.588235, 0.588235, 1 )
Button/colors/font_color_pressed = Color( 0.588235, 0.588235, 0.588235, 1 )
Button/constants/hseparation = 2
Button/fonts/font = SubResource( 34 )
Button/styles/disabled = null
Button/styles/focus = SubResource( 47 )
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null

[sub_resource type="DynamicFont" id=53]
size = 60
outline_size = 9
outline_color = Color( 0.121569, 0.121569, 0.121569, 1 )
use_filter = true
extra_spacing_top = 7
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=54]
default_font = SubResource( 53 )
Button/colors/font_color = Color( 0.588235, 0.588235, 0.588235, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.588235, 0.588235, 0.588235, 1 )
Button/colors/font_color_hover = Color( 0.588235, 0.588235, 0.588235, 1 )
Button/colors/font_color_pressed = Color( 0.588235, 0.588235, 0.588235, 1 )
Button/constants/hseparation = 2
Button/fonts/font = SubResource( 34 )
Button/styles/disabled = null
Button/styles/focus = SubResource( 47 )
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null

[sub_resource type="Animation" id=24]
resource_name = "RESET"
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1656, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("../VictoryMenu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:material:shader_param/whitening")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Control:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 592, 512 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../P2_FullArt:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 264.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../Victory2:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=25]
resource_name = "enter"
tracks/0/type = "value"
tracks/0/path = NodePath("../VictoryMenu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "menu_ready"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:material:shader_param/whitening")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Control:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 0.406126, 1 ),
"update": 0,
"values": [ Vector2( 496, 472 ), Vector2( 496, 168 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../P2_FullArt:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 0.406126, 1 ),
"update": 0,
"values": [ 264.0, 1520.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:position:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 0.406126, 1 ),
"update": 0,
"values": [ 1656.0, 528.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../Victory2:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=37]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:offset:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 10, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=38]
resource_name = "default"
length = 0.8
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:offset:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 15, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 0.8 )
}

[sub_resource type="Animation" id=39]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=40]
resource_name = "default"
length = 1.6
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.75, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 0.75, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8, 1.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.75, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 0.75, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8, 1.6 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8, 1.6 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8, 1.6 )
}

[node name="VictoryScreenSurvival" type="Node2D"]
script = ExtResource( 3 )

[node name="AltInputs" parent="." instance=ExtResource( 8 )]

[node name="Transition" type="AnimationPlayer" parent="."]
autoplay = "start_transit_in"
anims/RESET = SubResource( 28 )
anims/start_transit_in = SubResource( 29 )
anims/transit_to_main_menu = SubResource( 42 )
anims/transit_to_survival = SubResource( 31 )

[node name="Background" type="Node2D" parent="."]

[node name="Background" type="ColorRect" parent="Background"]
modulate = Color( 0.658663, 0.658663, 0.658663, 1 )
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.121569, 0.121569, 0.121569, 1 )

[node name="Back" type="Node2D" parent="Background"]
modulate = Color( 0.588235, 0.588235, 0.588235, 1 )

[node name="Background" type="TextureRect" parent="Background/Back"]
modulate = Color( 0.458824, 0.458824, 0.458824, 1 )
material = SubResource( 50 )
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 2 )
stretch_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background/Back/Background"]
autoplay = "default"
playback_speed = 0.5
anims/default = SubResource( 51 )
anims/rainbow = SubResource( 52 )

[node name="Triangle" type="Sprite" parent="Background"]
modulate = Color( 0.73, 0.19, 0.27, 1 )
position = Vector2( 260, 684 )
texture = ExtResource( 7 )

[node name="Triangle2" type="Sprite" parent="Background"]
modulate = Color( 0.215686, 0.482353, 0.823529, 1 )
position = Vector2( 1660, 404 )
rotation = 3.14159
texture = ExtResource( 7 )

[node name="P1_FullArt" type="Sprite" parent="."]
material = SubResource( 48 )
position = Vector2( 1656, 624 )
texture = ExtResource( 1 )

[node name="P2_FullArt" type="Sprite" parent="."]
material = SubResource( 48 )
position = Vector2( 264, 624 )
texture = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_left = 592.0
margin_top = 512.0
margin_right = 592.0
margin_bottom = 512.0

[node name="Victory" type="Label" parent="Control"]
margin_right = 906.0
margin_bottom = 258.0
theme = SubResource( 27 )
custom_colors/font_color = Color( 0.941176, 0.941176, 0.941176, 1 )
text = "Victory!"
align = 1
valign = 1

[node name="Victory2" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_top = 368.0
margin_right = 1920.0
margin_bottom = 600.0
theme = SubResource( 54 )
custom_colors/font_color = Color( 0.941176, 0.941176, 0.941176, 1 )
text = "STANDARD
Time - 01:11:11"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../P1_FullArt")
autoplay = "enter"
anims/RESET = SubResource( 24 )
anims/enter = SubResource( 25 )

[node name="VictoryMenu" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 632.0
margin_top = 640.0
margin_right = 632.0
margin_bottom = 640.0

[node name="ColorRect" type="ColorRect" parent="VictoryMenu"]
margin_left = -8.0
margin_top = -8.0
margin_right = 664.0
margin_bottom = 200.0
color = Color( 0.87451, 0.87451, 0.87451, 1 )

[node name="ColorRect2" type="ColorRect" parent="VictoryMenu"]
margin_right = 656.0
margin_bottom = 192.0
rect_pivot_offset = Vector2( 384, 8 )
color = Color( 0.121569, 0.121569, 0.121569, 1 )

[node name="VictoryList" type="VBoxContainer" parent="VictoryMenu"]
margin_left = 97.0
margin_top = 32.0
margin_right = 595.0
margin_bottom = 148.0

[node name="ReturnToSurvival" parent="VictoryMenu/VictoryList" instance=ExtResource( 6 )]
margin_right = 498.0
focus_neighbour_top = NodePath("../ReturnToMainMenu")
text = "Return to Survival Menu"

[node name="ReturnToMainMenu" parent="VictoryMenu/VictoryList" instance=ExtResource( 6 )]
margin_top = 60.0
margin_right = 498.0
margin_bottom = 116.0
focus_neighbour_bottom = NodePath("../ReturnToSurvival")
text = "Return to Main Menu"

[node name="Cursor" type="Sprite" parent="VictoryMenu"]
position = Vector2( 55.5, 61 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 5 )
offset = Vector2( 10, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="VictoryMenu/Cursor"]
autoplay = "default"
anims/RESET = SubResource( 37 )
anims/default = SubResource( 38 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="VictoryMenu/Cursor"]
autoplay = "default"
anims/RESET = SubResource( 39 )
anims/default = SubResource( 40 )
